# raytracing-course

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
assets/: pr5_2.txt  test.txt  test2.txt
inc/: camera.hpp  color.hpp  light.hpp  object.hpp  quat.hpp  scene.hpp  types.hpp
odin/: color.odin  light.odin  main.odin  object.odin  parser.odin  rand.odin  ray.odin  render.odin  samplers.odin  scene.odin  types.odin  utils.odin  vec.odin
pr1/: CMakeLists.txt  build.sh  run.sh
pr1/inc/: camera.hpp  color.hpp  image.hpp  object.hpp  quat.hpp  ray.hpp  scene.hpp  test.hpp  types.hpp  vec.hpp
pr1/src/: camera.cpp  color.cpp  image.cpp  main.cpp  object.cpp  quat.cpp  ray.cpp  scene.cpp  vec.cpp
src/: camera.cpp  color.cpp  light.cpp  main.cpp  object.cpp  quat.cpp  ray.cpp  scene.cpp
